...
    "Cancel Order" : {

    },
    "Cards" : {

    },
    "Cart" : {

    },
    "Cart is empty. Start shopping to add items." : {

    },
    "Categories" : {
...
      "isCommentAutoGenerated" : true
    },
    "Clear Pending Sync" : {
      "comment" : "The title of a confirmation dialog that lets the user clear all pending sync operations.",
      "isCommentAutoGenerated" : true
    },
    "Clear text" : {
      "comment" : "A button label that clears the text in a text field.",
      "isCommentAutoGenerated" : true
    },
    "Close" : {

    },
...
    "Deliver to" : {

    },
    "Delivery" : {

    },
    "Delivery Address" : {

    },
    "Delivery Details" : {

    },
    "Delivery Fee" : {
...
    "E-Mail" : {

    },
    "Edit" : {

    },
    "Edit Profile" : {

    },
    "Email" : {

    },
    "Email Address" : {
...
    "Estimated Delivery" : {

    },
    "ETA: %@" : {

    },
    "Explore" : {

    },
    "Export Logs" : {
      "comment" : "A button that allows exporting logs.",
      "isCommentAutoGenerated" : true
    },
...
    "Kunden:" : {

    },
    "Label Small" : {

    },
    "Language" : {

    },
    "Last Sync:" : {
      "comment" : "A label describing the last time the app successfully synchronized with the server.",
      "isCommentAutoGenerated" : true
    },
...
    "Not available" : {

    },
    "Note: %@" : {

    },
    "Notifications" : {

    },
    "Notizen (optional)" : {

    },
    "Nutrition Information" : {
...
      "comment" : "A title for the view.",
      "isCommentAutoGenerated" : true
    },
    "Order Progress" : {

    },
    "Order Summary" : {

    },
    "Order Tracking" : {

    },
    "Order Update" : {

    },
    "Order Updates" : {

    },
    "Orders" : {

    },
    "Original Price $" : {

    },
    "Out of stock" : {
...

    },
    "Partner Management" : {
      "comment" : "A title for a view that lets admins manage partners.",
      "isCommentAutoGenerated" : true
    },
    "Partner:" : {

    },
    "Partners" : {
      "comment" : "The title of the navigation view for managing partners.",
      "isCommentAutoGenerated" : true
    },
...
    "Payment" : {

    },
    "Payment Error" : {

    },
    "Payment Method" : {

    },
    "Payment Summary" : {

    },
    "Pending Operations:" : {
...
    "Processing..." : {

    },
    "Product Name" : {

    },
    "Profile" : {

    },
    "Profile Photo" : {

    },
    "Quantity" : {
...
    "Restart Required" : {

    },
    "Restaurant anrufen" : {

    },
    "Retry" : {

    },
    "Revenue" : {

    },
    "Revenue Trends" : {
...
      "comment" : "A button to run a speed test.",
      "isCommentAutoGenerated" : true
    },
    "Sample Card" : {

    },
    "Save" : {

    },
    "Schedule" : {

    },
    "Schedule Report" : {
...

    },
    "Services" : {
      "comment" : "A label describing the section of the sync status view related to the services.",
      "isCommentAutoGenerated" : true
    },
    "Settings" : {

    },
    "Share" : {

    },
    "Share Dashboard" : {
...
    "Your business is currently accepting orders" : {

    },
    "Your business is currently closed to new orders" : {

    },
    "Your cart is empty" : {

    },
    "Your completed orders will appear here" : {

    },
    "Your order has been placed successfully and is being prepared with care." : {
...
